@@ -20,7 +20,7 @@ TODO LIST
 -[ ] Decide and add a license
 -[ ] Investigate a way to 'portably' use 32 and 64 bits
         numbers.
--[ ] Write a little 'extra' to generate numbers according
+-[o] Write a little 'extra' to generate numbers according
         to a distribution. This has some problems:
         - Some ways need a fixed number of random numbers
         - Some don't, for theese I will have to study a
