@@ -1,3 +1,10 @@
+2013-07-04
+----------
+
+First version of the distribution library 
+and a little test of them
+
+
 2013-05-27
 ----------
 
